tox.ini: Expand N803 and N806 error paths
This way it will be easier to fix the existing errors gradually and also
it prevents the introduction of new errors within files that do not have
them yet.

Sort file paths and combine them where possible.

Change-Id: I56fe9969862996bef1dfb8a4f3cfc9dccb04c695

--- a/tox.ini
+++ b/tox.ini
@@ -140,7 +140,9 @@ deps =
 # The following are to be fixed
 # D102: Missing docstring in public method
 # D103: Missing docstring in public function
-# N802, N803, N806 : naming convention
+# N802: function name should be lowercase
+# N803: argument name should be lowercase
+# N806: variable in function should be lowercase
 # P102,P103: string does contain unindexed parameters; see I36355923
 
 # Errors occured after upgrade to pydocstyle 2.0.0 (T164142)
@@ -157,45 +159,115 @@ require-code = true
 per-file-ignores =
     generate_family_file.py : T001
     pwb.py : T001
-    setup.py : T001
-    pywikibot/** : N803, N806
-    pywikibot/comms/http.py : T001
-    pywikibot/date.py : E241
-    pywikibot/family.py : E241
-    pywikibot/fixes.py : E241
-    pywikibot/textlib.py : E241
-    pywikibot/userinterfaces/gui.py : N812
-    pywikibot/userinterfaces/terminal_interface_unix.py : E241
-    pywikibot/userinterfaces/terminal_interface_win32.py : E241
-    pywikibot/textlib.py : N801
-    pywikibot/userinterfaces/transliteration.py : N801
-    pywikibot/userinterfaces/win32_unicode.py : N801, N812, T001
-    tests/page_tests.py : E241
-    scripts/imagetransfer.py : E241
-    tests/ui_tests.py : D102, D103, N801
-    tests/* : N813
-    scripts/* : N803, N806
-    scripts/checkimages.py : N801
-    scripts/imagecopy.py : N801
-    scripts/imagecopy_self.py : N801
-    scripts/archive/featured.py : D102, D103
-    scripts/flickrripper.py : T001
-    scripts/harvest_template.py : T001
-    scripts/script_wui.py : D102
-    scripts/makecat.py : D103
-    scripts/maintenance/* : T001
-    scripts/interwiki.py : P102
-    pywikibot/__init__.py : P103
     # pydocstyle cannot handle multiple __all__ variables
-    pywikibot/__init__.py : D999
-    # valid N805 naming convention exceptions
-    pywikibot/userinterfaces/terminal_interface.py : N814
-    tests/pwb/* : T001
-    # invalidly detected as {} format string:
-    tests/textlib_tests.py : P103
+    pywikibot/__init__.py : P103, D999, N806
+    pywikibot/bot.py : N806
+    pywikibot/comms/http.py : T001
+    pywikibot/compat/catlib.py : N803
+    pywikibot/config2.py : N806
+    pywikibot/cosmetic_changes.py : N803, N806
+    pywikibot/data/api.py : N803, N806
+    pywikibot/data/wikistats.py : N806
+    pywikibot/date.py : E241, N803, N806
+    pywikibot/diff.py : N806
+    pywikibot/editor.py : N803, N806
     # __dict__ used in a discouraged manner
     # regex matches the first physical line of logical line of the error
     pywikibot/exceptions.py : H501
+    pywikibot/family.py : E241, N803, N806
+    pywikibot/fixes.py : E241
+    pywikibot/interwiki_graph.py : N803, N806
+    pywikibot/logging.py : N803
+    pywikibot/page.py : N803, N806
+    pywikibot/pagegenerators.py : N803, N806
+    pywikibot/site.py : N803, N806
+    pywikibot/specialbots.py : N803, N806
+    pywikibot/textlib.py : E241, N801, N803, N806
+    pywikibot/titletranslate.py : N806
+    pywikibot/tools/_logging.py : N806
+    pywikibot/tools/ip.py : N803
+    pywikibot/userinterfaces/cgi_interface.py : N803
+    pywikibot/userinterfaces/gui.py : N812, N803, N806
+    # valid N805 naming convention exceptions
+    pywikibot/userinterfaces/terminal_interface.py : N814
+    pywikibot/userinterfaces/terminal_interface_base.py : N803, N806
+    pywikibot/userinterfaces/terminal_interface_unix.py : E241, N806
+    pywikibot/userinterfaces/terminal_interface_win32.py : E241
+    pywikibot/userinterfaces/transliteration.py : N801
+    pywikibot/userinterfaces/win32_unicode.py : N801, N812, T001, N803, N806
+    pywikibot/xmlreader.py : N803, N806
+    scripts/add_text.py : N803, N806
+    scripts/archive/featured.py : D102, D103
+    scripts/basic.py : N806
+    scripts/blockpageschecker.py : N803, N806
+    scripts/capitalize_redirects.py : N806
+    scripts/casechecker.py : N803, N806
+    scripts/category.py : N803, N806
+    scripts/category_redirect.py : N803, N806
+    scripts/cfd.py : N803, N806
+    scripts/checkimages.py : N801, N803, N806
+    scripts/clean_sandbox.py : N806
+    scripts/commons_link.py : N806
+    scripts/commonscat.py : N803, N806
+    scripts/cosmetic_changes.py : N806
+    scripts/create_categories.py : N806
+    scripts/data_ingestion.py : N803, N806
+    scripts/delete.py : N806
+    scripts/editarticle.py : N806
+    scripts/fixing_redirects.py : N803, N806
+    scripts/flickrripper.py : T001, N803, N806
+    scripts/followlive.py : N803
+    scripts/harvest_template.py : T001, N803
+    scripts/image.py : N806
+    scripts/imagecopy.py : N801, N803, N806
+    scripts/imagecopy_self.py : N801, N803, N806
+    scripts/imageharvest.py : N806
+    scripts/imagerecat.py : N803, N806
+    scripts/imagetransfer.py : E241, N803, N806
+    scripts/imageuncat.py : N806
+    scripts/interwiki.py : P102, N803, N806
+    scripts/interwikidata.py : N806
+    scripts/isbn.py : N803, N806
+    scripts/listpages.py : N806
+    scripts/lonelypages.py : N806
+    scripts/maintenance/* : T001
+    scripts/makecat.py : D103
+    scripts/match_images.py : N803, N806
+    scripts/misspelling.py : N803, N806
+    scripts/movepages.py : N803, N806
+    scripts/ndashredir.py : N806
+    scripts/noreferences.py : N803, N806
+    scripts/nowcommons.py : N803, N806
+    scripts/pagefromfile.py : N806
+    scripts/patrol.py : N806
+    scripts/piper.py : N806
+    scripts/protect.py : N806
+    scripts/redirect.py : N803, N806
+    scripts/reflinks.py : N806
+    scripts/replace.py : N803, N806
+    scripts/script_wui.py : D102, N806
+    scripts/selflink.py : N806
+    scripts/solve_disambiguation.py : N803, N806
+    scripts/spamremove.py : N806
+    scripts/states_redirect.py : N806
+    scripts/surnames_redirects.py : N806
+    scripts/table2wiki.py : N806
+    scripts/template.py : N806
+    scripts/templatecount.py : N806
+    scripts/touch.py : N806
+    scripts/transferbot.py : N806
+    scripts/unlink.py : N803
+    scripts/upload.py : N806
+    scripts/watchlist.py : N803
+    scripts/weblinkchecker.py : N803, N806
+    scripts/welcome.py : N806
+    setup.py : T001
+    tests/* : N813
+    tests/page_tests.py : E241
+    tests/pwb/* : T001
+    # invalidly detected as {} format string:
+    tests/textlib_tests.py : P103
+    tests/ui_tests.py : D102, D103, N801
 
 [pep8]
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*,scripts/userscripts/*
