[tox] Ignore presence of implicit parameters errors
With Python 2.7+ implicit parameters are allowed. After dropping support of
Python 2.6 this error code should be ignored by flake8-string-format .

Change-Id: I208b75d1711e2244aab29e90bfad5860387d6af0

--- a/tox.ini
+++ b/tox.ini
@@ -136,6 +136,8 @@ deps =
 # H301: Do not import more than one module per line; Pywikibot uses H306 (Alphabetically order your imports by the full module path)
 # W503: line break before binary operator; against current PEP 8 recommendation
 # P101: format string does contain unindexed parameters
+# P102: docstring does contain unindexed parameters
+# P103: other string does contain unindexed parameters
 
 # The following are to be fixed
 # D102: Missing docstring in public method
@@ -143,14 +145,13 @@ deps =
 # N802: function name should be lowercase
 # N803: argument name should be lowercase
 # N806: variable in function should be lowercase
-# P102,P103: string does contain unindexed parameters; see I36355923
 
 # Errors occured after upgrade to pydocstyle 2.0.0 (T164142)
 # D401: First line should be in imperative mood; try rephrasing
 # D413: Missing blank line after last section
 # D412: No blank lines allowed between a section header and its content
 
-ignore = D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H236,H301,H404,H405,H903,N802,D401,D413,D103,D412,P101,W503
+ignore = D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H236,H301,H404,H405,H903,N802,D401,D413,D103,D412,P101,P102,P103,W503
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*,scripts/userscripts/*
 min-version = 2.7
 max_line_length = 100
@@ -160,7 +161,7 @@ per-file-ignores =
     generate_family_file.py : T001
     pwb.py : T001
     # pydocstyle cannot handle multiple __all__ variables
-    pywikibot/__init__.py : P103, D999, N806
+    pywikibot/__init__.py : D999, N806
     pywikibot/comms/http.py : T001
     pywikibot/compat/catlib.py : N803
     pywikibot/config2.py : N806
@@ -213,7 +214,7 @@ per-file-ignores =
     scripts/imagecopy_self.py : N801, N803, N806
     scripts/imagerecat.py : N803, N806
     scripts/imagetransfer.py : E241, N803, N806
-    scripts/interwiki.py : P102, N803, N806
+    scripts/interwiki.py : N803, N806
     scripts/isbn.py : N803, N806
     scripts/maintenance/* : T001
     scripts/makecat.py : D103
@@ -237,8 +238,6 @@ per-file-ignores =
     tests/* : N813
     tests/page_tests.py : E241
     tests/pwb/* : T001
-    # invalidly detected as {} format string:
-    tests/textlib_tests.py : P103
     tests/ui_tests.py : D102, D103, N801
 
 [pep8]
