Remove an unused attribute from HarvestRobot
The attribute is only used to make a list of templates.

Change-Id: Id247b3359b51f493a59738e1d5f01523c11786e8

--- a/tox.ini
+++ b/tox.ini
@@ -209,7 +209,7 @@ per-file-ignores =
     scripts/data_ingestion.py : N803, N806
     scripts/fixing_redirects.py : N803, N806
     scripts/flickrripper.py : T001, N803, N806
-    scripts/harvest_template.py : T001, N803
+    scripts/harvest_template.py : T001
     scripts/imagecopy.py : N801, N803, N806
     scripts/imagecopy_self.py : N801, N803, N806
     scripts/imagerecat.py : N803, N806
