--- a/pywikibot/epydoc.cfg
+++ b/pywikibot/epydoc.cfg
@@ -26,7 +26,7 @@ name: Python Mediawiki Framework
 
 # url
 #   The documented project's URL.
-url: https://www.mediawiki.org/wiki/Special:MyLanguage/Manual:Pywikibot
+url: https://www.mediawiki.org/wiki/Manual:Pywikibot
 
 # frames
 #   Whether or not to include a frames-based table of contents.
