Re-enable OAuth tests
According to T173498#4270319, Dvorapa has reset the OAuth keys on Travis.
Let's see if it has fixed the issue.

Bug: T173498
Change-Id: I11c090dc9a2b38a246eee8d984534690aae3e26b

--- a/.travis.yml
+++ b/.travis.yml
@@ -141,20 +141,18 @@ matrix:
             - graphviz
             - liblua5.1-0-dev
             - python-ipaddr
-    # Disabled due to T173498
-    #- python: '2.7'
-    #  env: LANGUAGE=en FAMILY=wpbeta SITE_ONLY=1 OAUTH_DOMAIN="en.wikipedia.beta.wmflabs.org"
-    #- python: '3.6'
-    #  env: LANGUAGE=zh FAMILY=wpbeta SITE_ONLY=1 OAUTH_DOMAIN="zh.wikipedia.beta.wmflabs.org"
+    - python: '2.7'
+      env: LANGUAGE=en FAMILY=wpbeta SITE_ONLY=1 OAUTH_DOMAIN="en.wikipedia.beta.wmflabs.org"
+    - python: '3.6'
+      env: LANGUAGE=zh FAMILY=wpbeta SITE_ONLY=1 OAUTH_DOMAIN="zh.wikipedia.beta.wmflabs.org"
     - python: '3.4'
       env: LANGUAGE=en FAMILY=wsbeta SITE_ONLY=1
     - python: '2.7'
       env: LANGUAGE=wikia FAMILY=wikia PYWIKIBOT2_TEST_NO_RC=1
     - python: '3.5'
       env: LANGUAGE=en FAMILY=musicbrainz SITE_ONLY=1
-    # Disabled due to T173498
-    #- python: '3.4'
-    #  env: LANGUAGE=test FAMILY=wikipedia SITE_ONLY=1 OAUTH_DOMAIN="test.wikipedia.org"
+    - python: '3.4'
+      env: LANGUAGE=test FAMILY=wikipedia SITE_ONLY=1 OAUTH_DOMAIN="test.wikipedia.org"
     - python: '3.4'
       env: LANGUAGE=test FAMILY=wikidata SITE_ONLY=1
     - python: '3.4'
