.travis.yml: Escape single quotes when printing oauth_token_var
If the quotes are not escaped, then bash interprets `', '` as `, `
and the written tuple will be in the form of ('key , key, key, key')
instead of ('key', 'key', 'key', 'key').

Bug: T173498
Change-Id: I3b7720e8b781c502aa650e8ff3a7070e64cc2517

--- a/.travis.yml
+++ b/.travis.yml
@@ -85,7 +85,7 @@ script:
       fi ;
       oauth_token_var="OAUTH_TOKENS_${FAMILY^^}_${LANGUAGE^^}" ;
       if [[ -n "${!oauth_token_var}" ]]; then
-        printf "authenticate['${OAUTH_DOMAIN}'] = ('%s')\n" "${!oauth_token_var//:/', '}" >> ~/.pywikibot/user-config.py ;
+        printf "authenticate['${OAUTH_DOMAIN}'] = ('%s')\n" "${!oauth_token_var//:/\', \'}" >> ~/.pywikibot/user-config.py ;
       fi ;
     fi
   - echo "authenticate['wiki.musicbrainz.org'] = ('NOTSPAM', 'NOTSPAM')" >> ~/.pywikibot/user-config.py ;
