textlib._create_default_regexes: Avoid using inline flags
- Replace dots with [\s\S] instead of using (?s).
- Replace ^ with (?:(?<=\n)|\A) and replace $ with (?=\n|\Z) instead of
  using (?m).
- Replace characters with a character class containing their uppercase
  and lowercase forms instead of using (?i).
- During the rewrite most of the E241 errors were resolved. Fix the few
  remaining ones and remove E241 from tox.ini ignore codes.
- Sort _regex_cache entries.
- Remoe score, source, ref, pre, and gallery entries. They will be
  created on demand during _get_regexes call.

Bug: T195538
Change-Id: Ibe2c9a35da8f2fcf4fe960c6f8447e65bea3eaea

--- a/tox.ini
+++ b/tox.ini
@@ -180,7 +180,7 @@ per-file-ignores =
     pywikibot/logging.py : N803
     pywikibot/pagegenerators.py : N803, N806
     pywikibot/specialbots.py : N803, N806
-    pywikibot/textlib.py : E241, N801, N803, N806
+    pywikibot/textlib.py : N801, N803, N806
     pywikibot/tools/ip.py : N803
     pywikibot/userinterfaces/cgi_interface.py : N803
     pywikibot/userinterfaces/gui.py : N812, N803, N806
