Fix some of the N806 naming errors in various scripts
Also remove D102 from global ignore list of tox.ini and fix its only
occurrence in download_dump.py.

Change-Id: I4c6af21343c2c1568d952746d32433c4c961b9de

--- a/tox.ini
+++ b/tox.ini
@@ -151,7 +151,7 @@ deps =
 # D413: Missing blank line after last section
 # D412: No blank lines allowed between a section header and its content
 
-ignore = D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H236,H301,H404,H405,H903,N802,D401,D413,D103,D412,P101,P102,P103,W503
+ignore = D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H236,H301,H404,H405,H903,N802,D401,D413,D412,P101,P102,P103,W503
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*,scripts/userscripts/*
 min-version = 2.7
 max_line_length = 100
@@ -164,7 +164,6 @@ per-file-ignores =
     pywikibot/__init__.py : D999, N806
     pywikibot/comms/http.py : T001
     pywikibot/compat/catlib.py : N803
-    pywikibot/config2.py : N806
     pywikibot/cosmetic_changes.py : N803, N806
     pywikibot/data/api.py : N803, N806
     pywikibot/date.py : E241, N803, N806
@@ -195,7 +194,6 @@ per-file-ignores =
     scripts/add_text.py : N803, N806
     scripts/archive/featured.py : D102, D103
     scripts/blockpageschecker.py : N803, N806
-    scripts/capitalize_redirects.py : N806
     scripts/casechecker.py : N803, N806
     scripts/category.py : N803, N806
     scripts/category_redirect.py : N803, N806
@@ -220,11 +218,9 @@ per-file-ignores =
     scripts/noreferences.py : N803, N806
     scripts/nowcommons.py : N803, N806
     scripts/redirect.py : N803, N806
-    scripts/reflinks.py : N806
     scripts/replace.py : N803, N806
     scripts/script_wui.py : D102, N806
     scripts/solve_disambiguation.py : N803, N806
-    scripts/table2wiki.py : N806
     scripts/unlink.py : N803
     scripts/watchlist.py : N803
     scripts/weblinkchecker.py : N803, N806
