tox.ini: Ignore N802 errors using per-file-ignores, not globally
This will help in gradually fixing them and prevents adding new ones
in files that don't have them already.

Change-Id: I59116ae68ddee27442ec3183d1386d7e477c89fa

--- a/tox.ini
+++ b/tox.ini
@@ -151,7 +151,7 @@ deps =
 # D413: Missing blank line after last section
 # D412: No blank lines allowed between a section header and its content
 
-ignore = D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H236,H301,H404,H405,H903,N802,D401,D413,D412,P101,P102,P103,W503
+ignore = D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H236,H301,H404,H405,H903,D401,D413,D412,P101,P102,P103,W503
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*,scripts/userscripts/*
 min-version = 2.7
 max_line_length = 100
@@ -161,74 +161,135 @@ per-file-ignores =
     generate_family_file.py : T001
     pwb.py : T001
     # pydocstyle cannot handle multiple __all__ variables
-    pywikibot/__init__.py : D999, N806
+    pywikibot/__init__.py : D999, N806, N802
+    pywikibot/_wbtypes.py: N802
+    pywikibot/backports.py: N802
+    pywikibot/bot.py: N802
     pywikibot/comms/http.py : T001
     pywikibot/compat/catlib.py : N803
-    pywikibot/cosmetic_changes.py : N803, N806
-    pywikibot/data/api.py : N803, N806
-    pywikibot/date.py : E241, N803, N806
+    pywikibot/compat/query.py: N802
+    pywikibot/cosmetic_changes.py : N803, N806, N802
+    pywikibot/data/api.py : N803, N806, N802
+    pywikibot/data/sparql.py: N802
+    pywikibot/date.py : E241, N803, N806, N802
+    pywikibot/echo.py: N802
     pywikibot/editor.py : N803, N806
     # __dict__ used in a discouraged manner
     # regex matches the first physical line of logical line of the error
-    pywikibot/exceptions.py : H501
+    pywikibot/exceptions.py : H501, N802
     # classproperties; most docs should go to family.py
-    pywikibot/families/* : N805, D102
-    pywikibot/family.py : E241, N803, N806, N805
-    pywikibot/fixes.py : E241
-    pywikibot/interwiki_graph.py : N803, N806
-    pywikibot/logging.py : N803
-    pywikibot/pagegenerators.py : N803, N806
-    pywikibot/specialbots.py : N803, N806
-    pywikibot/textlib.py : N801, N803, N806
-    pywikibot/tools/ip.py : N803
-    pywikibot/userinterfaces/cgi_interface.py : N803
-    pywikibot/userinterfaces/gui.py : N812, N803, N806
     # valid N805 naming convention exceptions
+    pywikibot/families/* : N805, D102
+    pywikibot/families/strategy_family.py: N802
+    pywikibot/families/wowwiki_family.py: N802
+    pywikibot/family.py : E241, N803, N806, N805, N802
+    pywikibot/fixes.py : E241
+    pywikibot/flow.py: N802
+    pywikibot/interwiki_graph.py : N803, N806, N802
+    pywikibot/logentries.py: N802
+    pywikibot/logging.py : N803
+    pywikibot/login.py: N802
+    pywikibot/page.py: N802
+    pywikibot/pagegenerators.py : N803, N806, N802
+    pywikibot/site.py: N802
+    pywikibot/specialbots.py : N803, N806, N802
+    pywikibot/textlib.py : N801, N803, N806, N802
+    pywikibot/throttle.py: N802
+    pywikibot/tools/_logging.py: N802
+    pywikibot/tools/ip.py : N803, N802
+    pywikibot/userinterfaces/cgi_interface.py : N803
+    pywikibot/userinterfaces/gui.py : N812, N803, N806, N802
     pywikibot/userinterfaces/terminal_interface.py : N814
-    pywikibot/userinterfaces/terminal_interface_base.py : N803, N806
+    pywikibot/userinterfaces/terminal_interface_base.py : N803, N806, N802
     pywikibot/userinterfaces/terminal_interface_unix.py : E241, N806
     pywikibot/userinterfaces/terminal_interface_win32.py : E241
     pywikibot/userinterfaces/transliteration.py : N801
     pywikibot/userinterfaces/win32_unicode.py : N801, N812, T001, N803, N806
-    pywikibot/xmlreader.py : N803, N806
+    pywikibot/weblib.py: N802
+    pywikibot/xmlreader.py : N803, N806, N802
     scripts/add_text.py : N803, N806
-    scripts/archive/featured.py : D102, D103
-    scripts/blockpageschecker.py : N803, N806
-    scripts/casechecker.py : N803, N806
-    scripts/category.py : N803, N806
-    scripts/category_redirect.py : N803, N806
-    scripts/cfd.py : N803, N806
-    scripts/checkimages.py : N801, N803, N806
-    scripts/commonscat.py : N803, N806
-    scripts/data_ingestion.py : N803, N806
+    scripts/archive/featured.py : D102, D103, N802
+    scripts/blockpageschecker.py : N803, N806, N802
+    scripts/casechecker.py : N803, N806, N802
+    scripts/category.py : N803, N806, N802
+    scripts/category_redirect.py : N803, N806, N802
+    scripts/cfd.py : N803, N806, N802
+    scripts/checkimages.py : N801, N803, N806, N802
+    scripts/commonscat.py : N803, N806, N802
+    scripts/data_ingestion.py : N803, N806, N802
     scripts/fixing_redirects.py : N803, N806
-    scripts/flickrripper.py : T001, N803, N806
-    scripts/harvest_template.py : T001
-    scripts/imagecopy.py : N801, N803, N806
-    scripts/imagecopy_self.py : N801, N803, N806
-    scripts/imagerecat.py : N803, N806
-    scripts/imagetransfer.py : E241, N803, N806
-    scripts/interwiki.py : N803, N806
-    scripts/isbn.py : N803, N806
+    scripts/flickrripper.py : T001, N803, N806, N802
+    scripts/freebasemappingupload.py: N802
+    scripts/harvest_template.py : T001, N802
+    scripts/imagecopy.py : N801, N803, N806, N802
+    scripts/imagecopy_self.py : N801, N803, N806, N802
+    scripts/imagerecat.py : N803, N806, N802
+    scripts/imagetransfer.py : E241, N803, N806, N802
+    scripts/imageuncat.py: N802
+    scripts/interwiki.py : N803, N806, N802
+    scripts/isbn.py : N803, N806, N802
     scripts/maintenance/* : T001
     scripts/makecat.py : D103
     scripts/match_images.py : N803, N806
-    scripts/misspelling.py : N803, N806
-    scripts/movepages.py : N803, N806
-    scripts/noreferences.py : N803, N806
-    scripts/nowcommons.py : N803, N806
+    scripts/misspelling.py : N803, N806, N802
+    scripts/movepages.py : N803, N806, N802
+    scripts/noreferences.py : N803, N806, N802
+    scripts/nowcommons.py : N803, N806, N802
     scripts/redirect.py : N803, N806
-    scripts/replace.py : N803, N806
-    scripts/script_wui.py : D102, N806
-    scripts/solve_disambiguation.py : N803, N806
+    scripts/reflinks.py: N802
+    scripts/replace.py : N803, N806, N802
+    scripts/script_wui.py : D102, N806, N802
+    scripts/solve_disambiguation.py : N803, N806, N802
+    scripts/table2wiki.py: N802
+    scripts/templatecount.py: N802
     scripts/unlink.py : N803
-    scripts/watchlist.py : N803
-    scripts/weblinkchecker.py : N803, N806
+    scripts/watchlist.py : N803, N802
+    scripts/weblinkchecker.py : N803, N806, N802
+    scripts/welcome.py: N802
     setup.py : T001
     tests/* : N813
-    tests/page_tests.py : E241
+    tests/api_tests.py: N802
+    tests/archivebot_tests.py: N802
+    tests/aspects.py: N802
+    tests/bot_tests.py: N802
+    tests/cosmetic_changes_tests.py: N802
+    tests/data_ingestion_tests.py: N802
+    tests/date_tests.py: N802
+    tests/dry_site_tests.py: N802
+    tests/edit_failure_tests.py: N802
+    tests/exceptions_tests.py: N802
+    tests/family_tests.py: N802
+    tests/file_tests.py: N802
+    tests/i18n_tests.py: N802
+    tests/imagecopy_tests.py: N802
+    tests/interwiki_link_tests.py: N802
+    tests/isbn_tests.py: N802
+    tests/link_tests.py: N802
+    tests/logentry_tests.py: N802
+    tests/login_tests.py: N802
+    tests/namespace_tests.py: N802
+    tests/page_tests.py : E241, N802
+    tests/pagegenerators_tests.py: N802
     tests/pwb/* : T001
-    tests/ui_tests.py : D102, D103, N801
+    tests/reflinks_tests.py: N802
+    tests/script_tests.py: N802
+    tests/site_detect_tests.py: N802
+    tests/site_tests.py: N802
+    tests/sparql_tests.py: N802
+    tests/tests_tests.py: N802
+    tests/textlib_tests.py: N802
+    tests/thread_tests.py: N802
+    tests/tk_tests.py: N802
+    tests/tools_formatter_tests.py: N802
+    tests/tools_ip_tests.py: N802
+    tests/tools_tests.py: N802
+    tests/ui_options_tests.py: N802
+    tests/ui_tests.py : D102, D103, N801, N802
+    tests/utils.py: N802
+    tests/weblib_tests.py: N802
+    tests/wikibase_edit_tests.py: N802
+    tests/wikibase_tests.py: N802
+    tests/xmlreader_tests.py: N802
 
 [pep8]
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*,scripts/userscripts/*
