--- a/tox.ini
+++ b/tox.ini
@@ -224,7 +224,7 @@ per-file-ignores =
     scripts/imagecopy.py : N801, N803, N806, N802
     scripts/imagecopy_self.py : N801, N803, N806, N802
     scripts/imagerecat.py : N803, N806, N802
-    scripts/imagetransfer.py : E241, N803, N806, N802
+    scripts/imagetransfer.py : N803, N806, N802
     scripts/imageuncat.py: N802
     scripts/interwiki.py : N803, N806, N802
     scripts/isbn.py : N803, N806, N802
