tox.ini: Add classproperty to pep8-naming's classmethod-decorators
Remove unneeded "# noqa: N805" comments.

Change-Id: I07441565530121b175e4edfb46d0fdf64976fab3

--- a/tox.ini
+++ b/tox.ini
@@ -157,6 +157,7 @@ min-version = 2.7
 max_line_length = 100
 accept-encodings = utf-8
 require-code = true
+classmethod-decorators = classmethod,classproperty
 per-file-ignores =
     generate_family_file.py : T001
     pwb.py : T001
@@ -178,11 +179,10 @@ per-file-ignores =
     # regex matches the first physical line of logical line of the error
     pywikibot/exceptions.py : H501, N802
     # classproperties; most docs should go to family.py
-    # valid N805 naming convention exceptions
-    pywikibot/families/* : N805, D102
+    pywikibot/families/* : D102
     pywikibot/families/strategy_family.py: N802
     pywikibot/families/wowwiki_family.py: N802
-    pywikibot/family.py : E241, N803, N806, N805, N802
+    pywikibot/family.py : E241, N803, N806, N802
     pywikibot/fixes.py : E241
     pywikibot/flow.py: N802
     pywikibot/interwiki_graph.py : N803, N806, N802
