--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,8 @@
 requests>=2.9,!=2.18.2
 
 # requests security extra
-cryptography>=1.3.4 ; python_full_version < '2.7.9'
+cryptography>=1.3.4 ; python_full_version == '2.7.7' or  python_full_version == '2.7.8'
+cryptography>=1.3.4,<2.3 ; python_full_version <= '2.7.6'
 pyOpenSSL>=0.14,!=17.2.0 ; python_full_version < '2.7.9'
 
 idna>=2.0.0 ; python_full_version < '2.7.9'
