Rename all PYWIKIBOT2_* environment variables to PYWIKIBOT_*
pywikibot.config2.py:
   Normalize environment variables and issue a deprecation for the old
   names. By normalizing environment variable names in config2.py
   there is no need to check for old names in any other module that
   imports pywikibot first.

Use the new enviroment variable names in all files.

There are only two modules that do not import pywikibot prior to checking
for PYWIKIBOT2_* variables: generate_family_file and generate_user_file.

generate_family_file.py:
  Create a new function, _import_with_no_user_config, that will
  import the requested module without loading user-config.py.
  This function automatically sets PYWIKIBOT_NO_USER_CONFIG=2 and
  restores its original value after the import is completed.
  Use the new functon to import MWSite as Wiki.

generate_user_file.py:
  Use the new function introduced in generate_family_file.py to
  import pywikibot without user-config.py file.

PYWIKIBOT2_USER_CONFIG was only used in appveyor.yml. Rename it
without deprecation.

Bug: T184674
Change-Id: I316358e51a62d19a3a0d6e8f7a707fda7b83bff4

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,8 +9,8 @@ environment:
     # See: http://stackoverflow.com/a/13751649/163740
     CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\appveyor\\run_with_env.cmd"
 
-    PYWIKIBOT2_DIR: "%appdata%\\Pywikibot"
-    PYWIKIBOT2_USER_CONFIG: "%appdata%\\Pywikibot\\user-config.py"
+    PYWIKIBOT_DIR: "%appdata%\\Pywikibot"
+    PYWIKIBOT_USER_CONFIG: "%appdata%\\Pywikibot\\user-config.py"
 
     PYSETUP_TEST_EXTRAS: "1"
 
@@ -93,9 +93,9 @@ test_script:
   - chcp 65001
   - set PYTHONIOENCODING=utf8
 
-  - "mkdir %PYWIKIBOT2_DIR%"
-  - "python -Werror::UserWarning -m generate_user_files -dir:%PYWIKIBOT2_DIR% -family:wikipedia -lang:en -v -debug"
-  - ps: "[IO.File]::AppendAllText($env:PYWIKIBOT2_USER_CONFIG, 'max_retries = 2; maximum_GET_length = 5000; transliteration_target = None;')"
+  - "mkdir %PYWIKIBOT_DIR%"
+  - "python -Werror::UserWarning -m generate_user_files -dir:%PYWIKIBOT_DIR% -family:wikipedia -lang:en -v -debug"
+  - ps: "[IO.File]::AppendAllText($env:PYWIKIBOT_USER_CONFIG, 'max_retries = 2; maximum_GET_length = 5000; transliteration_target = None;')"
 
   - set PYSETUP_TEST_NO_UI=1
   - "%CMD_IN_ENV% coverage run setup.py test"
