--- a/tox.ini
+++ b/tox.ini
@@ -172,7 +172,7 @@ per-file-ignores =
     pywikibot/cosmetic_changes.py : N803, N806, N802
     pywikibot/data/api.py : N803, N806, N802
     pywikibot/data/sparql.py: N802
-    pywikibot/date.py : E241, N803, N806, N802
+    pywikibot/date.py : N803, N806, N802
     pywikibot/echo.py: N802
     pywikibot/editor.py : N803, N806
     # __dict__ used in a discouraged manner
